<resources>
    <string name="app_name">Animeinfo</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="birth_date">Birth Day</string>
    <string name="country">Country</string>
    <string name="apply">Apply</string>
    <string name="one_piece">One Piece</string>
    <string name="rent">Rent</string>
    <string name="buy">Buy</string>
    <string name="rating">4.9</string>
    <string name="type">Family</string>
    <string name="percentage">97%</string>
    <string name="familliarity">Similar</string>
    <string name="lorem">"One Piece" adalah sebuah serial manga Jepang yang ditulis dan diilustrasikan oleh Eiichiro Oda. Manga ini pertama kali serialisasikan di majalah Weekly Shonen Jump pada tahun 1997 dan masih berlanjut hingga saat ini. Selain manga, "One Piece" juga diadaptasi menjadi serial anime, film, dan berbagai bentuk media lainnya.

Cerita "One Piece" berpusat pada petualangan seorang bajak laut muda bernama Monkey D. Luffy dan kru bajak lautnya yang dikenal sebagai "Topi Jerami" (Straw Hat Pirates). Luffy memiliki impian untuk menjadi Raja Bajak Laut dan menemukan harta karun legendaris yang dikenal sebagai "One Piece", yang terletak di Grand Line, lautan berbahaya di dunia fiksi ini.

Seiring dengan perjalanan mereka, Luffy dan krunya menghadapi berbagai tantangan, musuh, dan rintangan yang beragam, termasuk anggota Bajak Laut lainnya, pemerintah Dunia, dan organisasi kriminal. Mereka juga menjalin persahabatan baru, mengungkap misteri tentang dunia yang luas, dan menghadapi berbagai macam peristiwa yang menguji tekad dan kekuatan mereka.

Salah satu daya tarik utama "One Piece" adalah dunia yang luas dan kaya yang diciptakan oleh Oda, yang dihuni oleh berbagai jenis karakter dengan desain yang unik dan beragam kekuatan. Selain itu, cerita ini menggabungkan elemen petualangan, pertarungan, humor, dan emosi yang membuatnya populer di kalangan pembaca dan penonton dari berbagai usia.</string>
</resources>